Added OrgResource provider and user add event